[bug] image deformed on small device

--- a/app/assets/stylesheets/app.components.scss
+++ b/app/assets/stylesheets/app.components.scss
@@ -157,7 +157,7 @@
     overflow: hidden;
 
     img {
-      height: 400px;
+      max-height: 400px;
     }
   }
   img {
